obdalib-core/src/main/java/it/unibz/krdb/ontop/parser/DatalogParser.java
// $ANTLR 3.5.1 /Users/Sarah/Projects/ontop/obdalib-core/src/main/java/it/unibz/krdb/obda/parser/Datalog.g 2014-10-07 15:45:47

package it.unibz.krdb.ontop.parser;

import it.unibz.krdb.ontop.model.CQIE;
import it.unibz.krdb.ontop.model.DatalogProgram;
import it.unibz.krdb.ontop.model.DatatypeFactory;
import it.unibz.krdb.ontop.model.Function;
import it.unibz.krdb.ontop.model.Term;
import it.unibz.krdb.ontop.model.OBDADataFactory;
import it.unibz.krdb.ontop.model.Predicate;
import it.unibz.krdb.ontop.model.URIConstant;
import it.unibz.krdb.ontop.model.ValueConstant;
import it.unibz.krdb.ontop.model.Variable;
import it.unibz.krdb.ontop.model.impl.OBDADataFactoryImpl;
import it.unibz.krdb.ontop.model.impl.OBDAVocabulary;

import java.util.HashMap;
import java.util.HashSet;
import java.util.LinkedList;
import java.util.List;
import java.util.Vector;

import org.antlr.runtime.*;

@SuppressWarnings("all")
public class DatalogParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ALPHA", "ALPHANUM", "AMPERSAND", 
		"APOSTROPHE", "ASTERISK", "AT", "BACKSLASH", "BASE", "CARET", "COLON", 
		"COMMA", "DASH", "DIGIT", "DOLLAR", "DOT", "DOUBLE_SLASH", "EQUALS", "EXCLAMATION", 
		"GREATER", "HASH", "ID", "ID_CORE", "ID_PLAIN", "ID_START", "IMPLIES", 
		"INV_IMPLIES", "LESS", "LPAREN", "LSQ_BRACKET", "PERCENT", "PLUS", "PREFIX", 
		"QUESTION", "QUOTE_DOUBLE", "QUOTE_SINGLE", "REFERENCE", "RPAREN", "RSQ_BRACKET", 
		"SCHEMA", "SEMI", "SLASH", "STRING_LITERAL", "STRING_LITERAL2", "STRING_PREFIX", 
		"STRING_URI", "TILDE", "UNDERSCORE", "URI_PATH", "WS"
	};
	public static final int EOF=-1;
	public static final int ALPHA=4;
	public static final int ALPHANUM=5;
	public static final int AMPERSAND=6;
	public static final int APOSTROPHE=7;
	public static final int ASTERISK=8;
	public static final int AT=9;
	public static final int BACKSLASH=10;
	public static final int BASE=11;
	public static final int CARET=12;
	public static final int COLON=13;
	public static final int COMMA=14;
	public static final int DASH=15;
	public static final int DIGIT=16;
	public static final int DOLLAR=17;
	public static final int DOT=18;
	public static final int DOUBLE_SLASH=19;
	public static final int EQUALS=20;
	public static final int EXCLAMATION=21;
	public static final int GREATER=22;
	public static final int HASH=23;
	public static final int ID=24;
	public static final int ID_CORE=25;
	public static final int ID_PLAIN=26;
	public static final int ID_START=27;
	public static final int IMPLIES=28;
	public static final int INV_IMPLIES=29;
	public static final int LESS=30;
	public static final int LPAREN=31;
	public static final int LSQ_BRACKET=32;
	public static final int PERCENT=33;
	public static final int PLUS=34;
	public static final int PREFIX=35;
	public static final int QUESTION=36;
	public static final int QUOTE_DOUBLE=37;
	public static final int QUOTE_SINGLE=38;
	public static final int REFERENCE=39;
	public static final int RPAREN=40;
	public static final int RSQ_BRACKET=41;
	public static final int SCHEMA=42;
	public static final int SEMI=43;
	public static final int SLASH=44;
	public static final int STRING_LITERAL=45;
	public static final int STRING_LITERAL2=46;
	public static final int STRING_PREFIX=47;
	public static final int STRING_URI=48;
	public static final int TILDE=49;
	public static final int UNDERSCORE=50;
	public static final int URI_PATH=51;
	public static final int WS=52;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public DatalogParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public DatalogParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return DatalogParser.tokenNames; }
	@Override public String getGrammarFileName() { return "/Users/Sarah/Projects/ontop/obdalib-core/src/main/java/it/unibz/krdb/obda/parser/Datalog.g"; }


	/** Constants */
	private static final String OBDA_DEFAULT_URI = "obda-default";
	private static final String OBDA_BASE_URI = "obda-base";
	private static final String OBDA_SELECT_ALL = "obda-select-all";

	/** Map of directives */
	private HashMap<String, String> directives = new HashMap<String, String>();

	/** Set of variable terms */
	private HashSet<Variable> variables = new HashSet<Variable>();

	/** A factory to construct the predicates and terms */
	private static final OBDADataFactory dfac = OBDADataFactoryImpl.getInstance();
	private final DatatypeFactory dtfac = OBDADataFactoryImpl.getInstance().getDatatypeFactory();

	/** Select all flag */
	private boolean isSelectAll = false;

	public HashMap<String, String> getDirectives() {
	    return directives;
	}



	// $ANTLR start "parse"
	// /Users/Sarah/Projects/ontop/obdalib-core/src/main/java/it/unibz/krdb/obda/parser/Datalog.g:103:1: parse returns [DatalogProgram value] : prog EOF ;
	public final DatalogProgram parse() throws RecognitionException {
		DatalogProgram value = null;


		DatalogProgram prog1 =null;

		try {
			// /Users/Sarah/Projects/ontop/obdalib-core/src/main/java/it/unibz/krdb/obda/parser/Datalog.g:104:3: ( prog EOF )
			// /Users/Sarah/Projects/ontop/obdalib-core/src/main/java/it/unibz/krdb/obda/parser/Datalog.g:104:5: prog EOF
			{
			pushFollow(FOLLOW_prog_in_parse54);
			prog1=prog();
			state._fsp--;
			if (state.failed) return value;
			match(input,EOF,FOLLOW_EOF_in_parse56); if (state.failed) return value;
			if ( state.backtracking==0 ) {
			      value = prog1;
			    }
			}

		}
		catch (RecognitionException e) {
			 
			      throw e;
			    
		}

		finally {
			// do for sure before leaving
		}
		return value;
	}
	// $ANTLR end "parse"



	// $ANTLR start "prog"
	// /Users/Sarah/Projects/ontop/obdalib-core/src/main/java/it/unibz/krdb/obda/parser/Datalog.g:111:1: prog returns [DatalogProgram value] : ( base )? ( directive )* ( rule )+ ;
	public final DatalogProgram prog() throws RecognitionException {
		DatalogProgram value = null;


		CQIE rule2 =null;


		  value = dfac.getDatalogProgram();
		  CQIE rule = null;

		try {
			// /Users/Sarah/Projects/ontop/obdalib-core/src/main/java/it/unibz/krdb/obda/parser/Datalog.g:116:3: ( ( base )? ( directive )* ( rule )+ )
			// /Users/Sarah/Projects/ontop/obdalib-core/src/main/java/it/unibz/krdb/obda/parser/Datalog.g:116:5: ( base )? ( directive )* ( rule )+
			{
			// /Users/Sarah/Projects/ontop/obdalib-core/src/main/java/it/unibz/krdb/obda/parser/Datalog.g:116:5: ( base )?
			int alt1=2;
			int LA1_0 = input.LA(1);
			if ( (LA1_0==BASE) ) {
				alt1=1;
			}
			switch (alt1) {
				case 1 :
					// /Users/Sarah/Projects/ontop/obdalib-core/src/main/java/it/unibz/krdb/obda/parser/Datalog.g:116:5: base
					{
					pushFollow(FOLLOW_base_in_prog88);
					base();
					state._fsp--;
					if (state.failed) return value;
					}
					break;

			}

			// /Users/Sarah/Projects/ontop/obdalib-core/src/main/java/it/unibz/krdb/obda/parser/Datalog.g:117:5: ( directive )*
			loop2:
			while (true) {
				int alt2=2;
				int LA2_0 = input.LA(1);
				if ( (LA2_0==PREFIX) ) {
					alt2=1;
				}

				switch (alt2) {
				case 1 :
					// /Users/Sarah/Projects/ontop/obdalib-core/src/main/java/it/unibz/krdb/obda/parser/Datalog.g:117:5: directive
					{
					pushFollow(FOLLOW_directive_in_prog95);
					directive();
					state._fsp--;
					if (state.failed) return value;
					}
					break;

				default :
					break loop2;
				}
			}

			// /Users/Sarah/Projects/ontop/obdalib-core/src/main/java/it/unibz/krdb/obda/parser/Datalog.g:118:5: ( rule )+
			int cnt3=0;
			loop3:
			while (true) {
				int alt3=2;
				int LA3_0 = input.LA(1);
				if ( (LA3_0==COLON||LA3_0==ID_PLAIN||(LA3_0 >= IMPLIES && LA3_0 <= INV_IMPLIES)||(LA3_0 >= STRING_PREFIX && LA3_0 <= STRING_URI)) ) {
					alt3=1;
				}

				switch (alt3) {
				case 1 :
					// /Users/Sarah/Projects/ontop/obdalib-core/src/main/java/it/unibz/krdb/obda/parser/Datalog.g:118:6: rule
					{
					pushFollow(FOLLOW_rule_in_prog104);
					rule2=rule();
					state._fsp--;
					if (state.failed) return value;
					if ( state.backtracking==0 ) {
					      rule = rule2;
					      if (isSelectAll) {
					        List<Term> variableList = new Vector<Term>();
					        variableList.addAll(variables); // Import all the data from the Set to a Vector.
					         
					        // Get the head atom
					        Function head = rule.getHead();
					        String name = head.getFunctionSymbol().getName();
					        int size = variableList.size(); 
					        
					        // Get the predicate atom
					        Predicate predicate = dfac.getPredicate(name, size);
					        Function newhead = dfac.getFunction(predicate, variableList);
					        rule.updateHead(newhead);
					        
					        isSelectAll = false;  
					      }
					        
					      value.appendRule(rule);
					    }
					}
					break;

				default :
					if ( cnt3 >= 1 ) break loop3;
					if (state.backtracking>0) {state.failed=true; return value;}
					EarlyExitException eee = new EarlyExitException(3, input);
					throw eee;
				}
				cnt3++;
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return value;
	}
	// $ANTLR end "prog"



	// $ANTLR start "directive"
	// /Users/Sarah/Projects/ontop/obdalib-core/src/main/java/it/unibz/krdb/obda/parser/Datalog.g:141:1: directive : PREFIX prefix LESS uriref GREATER ;
	public final void directive() throws RecognitionException {
		ParserRuleReturnScope prefix3 =null;
		ParserRuleReturnScope uriref4 =null;


		  String prefix = "";
		  String uriref = "";

		try {
			// /Users/Sarah/Projects/ontop/obdalib-core/src/main/java/it/unibz/krdb/obda/parser/Datalog.g:146:3: ( PREFIX prefix LESS uriref GREATER )
			// /Users/Sarah/Projects/ontop/obdalib-core/src/main/java/it/unibz/krdb/obda/parser/Datalog.g:146:5: PREFIX prefix LESS uriref GREATER
			{
			match(input,PREFIX,FOLLOW_PREFIX_in_directive128); if (state.failed) return;
			pushFollow(FOLLOW_prefix_in_directive130);
			prefix3=prefix();
			state._fsp--;
			if (state.failed) return;
			match(input,LESS,FOLLOW_LESS_in_directive132); if (state.failed) return;
			pushFollow(FOLLOW_uriref_in_directive134);
			uriref4=uriref();
			state._fsp--;
			if (state.failed) return;
			match(input,GREATER,FOLLOW_GREATER_in_directive136); if (state.failed) return;
			if ( state.backtracking==0 ) {
			      prefix = (prefix3!=null?input.toString(prefix3.start,prefix3.stop):null);
			      prefix = prefix.substring(0, prefix.length()-1);  
			      if (prefix == null || prefix == "") // if there is no prefix id put the default name.
			        prefix = OBDA_DEFAULT_URI;

			      uriref = (uriref4!=null?input.toString(uriref4.start,uriref4.stop):null);
			      
			      directives.put(prefix, uriref);
			    }
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "directive"



	// $ANTLR start "base"
	// /Users/Sarah/Projects/ontop/obdalib-core/src/main/java/it/unibz/krdb/obda/parser/Datalog.g:158:1: base : BASE LESS uriref GREATER ;
	public final void base() throws RecognitionException {
		ParserRuleReturnScope uriref5 =null;


		  String prefix = OBDA_BASE_URI; // prefix name for the base
		  String uriref = "";

		try {
			// /Users/Sarah/Projects/ontop/obdalib-core/src/main/java/it/unibz/krdb/obda/parser/Datalog.g:163:3: ( BASE LESS uriref GREATER )
			// /Users/Sarah/Projects/ontop/obdalib-core/src/main/java/it/unibz/krdb/obda/parser/Datalog.g:163:5: BASE LESS uriref GREATER
			{
			match(input,BASE,FOLLOW_BASE_in_base156); if (state.failed) return;
			match(input,LESS,FOLLOW_LESS_in_base158); if (state.failed) return;
			pushFollow(FOLLOW_uriref_in_base160);
			uriref5=uriref();
			state._fsp--;
			if (state.failed) return;
			match(input,GREATER,FOLLOW_GREATER_in_base162); if (state.failed) return;
			if ( state.backtracking==0 ) {
			      uriref = (uriref5!=null?input.toString(uriref5.start,uriref5.stop):null);      
			      directives.put(prefix, uriref);
			    }
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "base"



	// $ANTLR start "rule"
	// /Users/Sarah/Projects/ontop/obdalib-core/src/main/java/it/unibz/krdb/obda/parser/Datalog.g:169:1: rule returns [CQIE value] : ( ( ( head )? INV_IMPLIES )=> datalog_syntax_rule | ( ( body )? IMPLIES )=> swirl_syntax_rule );
	public final CQIE rule() throws RecognitionException {
		CQIE value = null;


		CQIE datalog_syntax_rule6 =null;
		CQIE swirl_syntax_rule7 =null;

		try {
			// /Users/Sarah/Projects/ontop/obdalib-core/src/main/java/it/unibz/krdb/obda/parser/Datalog.g:170:3: ( ( ( head )? INV_IMPLIES )=> datalog_syntax_rule | ( ( body )? IMPLIES )=> swirl_syntax_rule )
			int alt4=2;
			int LA4_0 = input.LA(1);
			if ( (LA4_0==INV_IMPLIES) && (synpred1_Datalog())) {
				alt4=1;
			}
			else if ( (LA4_0==STRING_URI) ) {
				int LA4_2 = input.LA(2);
				if ( (synpred1_Datalog()) ) {
					alt4=1;
				}
				else if ( (synpred2_Datalog()) ) {
					alt4=2;
				}

				else {
					if (state.backtracking>0) {state.failed=true; return value;}
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 4, 2, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

			}
			else if ( (LA4_0==ID_PLAIN) ) {
				int LA4_3 = input.LA(2);
				if ( (synpred1_Datalog()) ) {
					alt4=1;
				}
				else if ( (synpred2_Datalog()) ) {
					alt4=2;
				}

				else {
					if (state.backtracking>0) {state.failed=true; return value;}
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 4, 3, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

			}
			else if ( (LA4_0==COLON||LA4_0==STRING_PREFIX) ) {
				int LA4_4 = input.LA(2);
				if ( (synpred1_Datalog()) ) {
					alt4=1;
				}
				else if ( (synpred2_Datalog()) ) {
					alt4=2;
				}

				else {
					if (state.backtracking>0) {state.failed=true; return value;}
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 4, 4, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

			}
			else if ( (LA4_0==IMPLIES) && (synpred2_Datalog())) {
				alt4=2;
			}

			switch (alt4) {
				case 1 :
					// /Users/Sarah/Projects/ontop/obdalib-core/src/main/java/it/unibz/krdb/obda/parser/Datalog.g:170:5: ( ( head )? INV_IMPLIES )=> datalog_syntax_rule
					{
					pushFollow(FOLLOW_datalog_syntax_rule_in_rule191);
					datalog_syntax_rule6=datalog_syntax_rule();
					state._fsp--;
					if (state.failed) return value;
					if ( state.backtracking==0 ) { 
					      value = datalog_syntax_rule6;
					    }
					}
					break;
				case 2 :
					// /Users/Sarah/Projects/ontop/obdalib-core/src/main/java/it/unibz/krdb/obda/parser/Datalog.g:173:5: ( ( body )? IMPLIES )=> swirl_syntax_rule
					{
					pushFollow(FOLLOW_swirl_syntax_rule_in_rule207);
					swirl_syntax_rule7=swirl_syntax_rule();
					state._fsp--;
					if (state.failed) return value;
					if ( state.backtracking==0 ) {
					      value = swirl_syntax_rule7;
					    }
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return value;
	}
	// $ANTLR end "rule"



	// $ANTLR start "datalog_syntax_rule"
	// /Users/Sarah/Projects/ontop/obdalib-core/src/main/java/it/unibz/krdb/obda/parser/Datalog.g:178:1: datalog_syntax_rule returns [CQIE value] : ( INV_IMPLIES body | datalog_syntax_alt );
	public final CQIE datalog_syntax_rule() throws RecognitionException {
		CQIE value = null;


		List<Function> body8 =null;
		CQIE datalog_syntax_alt9 =null;

		try {
			// /Users/Sarah/Projects/ontop/obdalib-core/src/main/java/it/unibz/krdb/obda/parser/Datalog.g:179:3: ( INV_IMPLIES body | datalog_syntax_alt )
			int alt5=2;
			int LA5_0 = input.LA(1);
			if ( (LA5_0==INV_IMPLIES) ) {
				alt5=1;
			}
			else if ( (LA5_0==COLON||LA5_0==ID_PLAIN||(LA5_0 >= STRING_PREFIX && LA5_0 <= STRING_URI)) ) {
				alt5=2;
			}

			else {
				if (state.backtracking>0) {state.failed=true; return value;}
				NoViableAltException nvae =
					new NoViableAltException("", 5, 0, input);
				throw nvae;
			}

			switch (alt5) {
				case 1 :
					// /Users/Sarah/Projects/ontop/obdalib-core/src/main/java/it/unibz/krdb/obda/parser/Datalog.g:179:5: INV_IMPLIES body
					{
					match(input,INV_IMPLIES,FOLLOW_INV_IMPLIES_in_datalog_syntax_rule226); if (state.failed) return value;
					pushFollow(FOLLOW_body_in_datalog_syntax_rule228);
					body8=body();
					state._fsp--;
					if (state.failed) return value;
					if ( state.backtracking==0 ) {
					      value = dfac.getCQIE(null, body8);
					    }
					}
					break;
				case 2 :
					// /Users/Sarah/Projects/ontop/obdalib-core/src/main/java/it/unibz/krdb/obda/parser/Datalog.g:182:5: datalog_syntax_alt
					{
					pushFollow(FOLLOW_datalog_syntax_alt_in_datalog_syntax_rule236);
					datalog_syntax_alt9=datalog_syntax_alt();
					state._fsp--;
					if (state.failed) return value;
					if ( state.backtracking==0 ) {
					      value = datalog_syntax_alt9;
					    }
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return value;
	}
	// $ANTLR end "datalog_syntax_rule"



	// $ANTLR start "datalog_syntax_alt"
	// /Users/Sarah/Projects/ontop/obdalib-core/src/main/java/it/unibz/krdb/obda/parser/Datalog.g:187:1: datalog_syntax_alt returns [CQIE value] : ( ( head INV_IMPLIES body )=> head INV_IMPLIES body | head INV_IMPLIES );
	public final CQIE datalog_syntax_alt() throws RecognitionException {
		CQIE value = null;


		Function head10 =null;
		List<Function> body11 =null;
		Function head12 =null;
